fix: avatar z-index incorrect

--- a/packages/app/src/Element/User/ProfileImage.css
+++ b/packages/app/src/Element/User/ProfileImage.css
@@ -13,7 +13,6 @@
   height: 48px;
   cursor: pointer;
   position: relative;
-  z-index: 2;
 }
 
 a.pfp {
